--- a/game.html
+++ b/game.html
@@ -204,6 +204,12 @@ var tank = {
                                                     <td>0-5，默认为0</td>
                                                 </tr>
                                                 <tr>
+                                                    <td>this.fire()</td>
+                                                    <td>射击</td>
+                                                    <td></td>
+                                                    <td></td>
+                                                </tr>
+                                                <tr>
                                                     <td>this.say(msg)</td>
                                                     <td>游戏中显示信息</td>
                                                     <td>你想要发送的信息</td>
