--- a/game.html
+++ b/game.html
@@ -161,10 +161,10 @@ var tank = {
 
             <p>有其他玩家存活并且可见时触发，enemies数组包含了所有这些存活且可见的玩家。</p>
         </li>
-        <li>onWeaponsSpotted
+        <li>onWeaponSpotted
             <h4>示例</h4>
     
-            <pre><code>onWeaponsSpotted : function(weapons) {
+            <pre><code>onWeaponSpotted : function(weapons) {
     //weapons[0]表示weapons数组中的第一个武器
     //获取weapons数组长度：weapons.length
     //获取第一个武器的属性：
