--- a/game.html
+++ b/game.html
@@ -275,6 +275,12 @@ var tank = {
                                                     <td>弧度</td>
                                                     <td>是</td>
                                                 </tr>
+                                                <tr>
+                                                    <td>this.bullet_speed</td>
+                                                    <td>当前子弹速度</td>
+                                                    <td>像素/秒</td>
+                                                    <td>否</td>
+                                                </tr>
                                             </tbody>
                                         </table>
                                     </div>
