--- a/game.html
+++ b/game.html
@@ -90,6 +90,7 @@
                             <li id="controlBtn" class="button info fit">START</li>
                             <li id="clearBtn" class="button info fit">CLEAR</li>
                             <a id="repoBtn" href="#repo" class="button info fit">ADD</a>
+                            <li id="againBtn" class="button info fit">AGAIN</li>
                         </ul>
                         <div id="editor">
 
@@ -464,6 +465,7 @@ var tank = {
         });
     </script>
     <script>
+    	var last_players = [];
         var controlBtn = document.getElementById("controlBtn");
         var restart = function() {
             window.current_code = editor.getValue();
@@ -491,10 +493,16 @@ var tank = {
                 }
                 core.running = true;
                 core.competing = true;
+                last_players = core.get_players();
                 $("#repoBtn").removeAttr("href");
                 controlBtn.innerHTML = "PAUSE";
                 socket.emit("update_code", {id:localStorage.curUser, code:window.current_code});        
             }
+        });
+        $("#againBtn").on('click', ()=>{
+        	last_players.forEach((id)=>{
+        		socket.emit('fetch_code', id);
+        	});
         });
     </script>
 
