--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
                 <!-- Banner -->
                     <section id="banner">
                         <div class="inner">
-                            <h2>LittleBattle : C Round Financing</h2>
+                            <h2>LittleBattle : Ghost Strikes Back</h2>
                             <p>2.5亿自主研发</p>
                             <ul class="actions">
                                 <li><a id="playBtn" class="button"
