--- a/game.html
+++ b/game.html
@@ -462,7 +462,11 @@ var tank = {
             for (let i=0; i<results.length; i++)
                 results[i].rate = results[i].num_kill / (results[i].num_death === 0 ? 1 : results[i].num_death);
             results.sort((a, b)=>{
-            		if (a.score < b.score)
+            		if (a.num_kill === 0 && b.num_kill > 0)
+            			return 1;
+            		else if (a.num_kill > 0 && b.num_kill === 0)
+            			return -1;
+            		else if (a.score < b.score)
             			return 1;
                     else if (a.score > b.score)
                     	return -1;
