--- a/game.html
+++ b/game.html
@@ -102,7 +102,7 @@
                         <div id="editor">
 
 var tank = {
-
+	character : 'normal',
     onEvent : function() {
         
     },
@@ -246,6 +246,12 @@ var tank = {
                                                     <td></td>
                                                 </tr>
                                                 <tr>
+                                                    <td>this.skill(arguments)</td>
+                                                    <td>使用特定的技能</td>
+                                                    <td>取决于特定技能而定</td>
+                                                    <td>取决于特定技能</td>
+                                                </tr>
+                                                <tr>
                                                     <td>this.say(msg)</td>
                                                     <td>游戏中显示信息</td>
                                                     <td>你想要发送的信息</td>
@@ -305,7 +311,14 @@ var tank = {
                                             </tbody>
                                         </table>
                                     </div>
-
+        <h2>人物</h2>
+        <ul>
+        	<li>
+        		<h4>刺客</h4>
+        		<p>定义：character : 'assassin'</p>
+        		<p>技能：隐身一段时间，调用方法：this.skill()</p>
+        	</li>
+        </ul>
         <h2>游戏参数</h2>
         <div class="table-wrapper">
             <table>
