--- a/game.html
+++ b/game.html
@@ -297,6 +297,18 @@ var tank = {
                                                     <td>否</td>
                                                 </tr>
                                                 <tr>
+                                                    <td>this.acc.x</td>
+                                                    <td>x方向加速度</td>
+                                                    <td>像素/秒/秒</td>
+                                                    <td>否</td>
+                                                </tr>
+                                                <tr>
+                                                    <td>this.acc.y</td>
+                                                    <td>y方向加速度</td>
+                                                    <td>像素/秒/秒</td>
+                                                    <td>否</td>
+                                                </tr>
+                                                <tr>
                                                     <td>this.dir</td>
                                                     <td>当前射击方向</td>
                                                     <td>弧度</td>
