--- a/game.html
+++ b/game.html
@@ -330,6 +330,11 @@ var tank = {
         		<p>定义：character : 'assassin'</p>
         		<p>技能：隐身一段时间，调用方法：this.skill()</p>
         	</li>
+        	<li>
+        		<h4>战士</h4>
+        		<p>定义：character : 'worrior'</p>
+        		<p>被动技能，以一定的几率反弹子弹，血量越低，几率越大</p>
+        	</li>
         </ul>
         <h2>游戏参数</h2>
         <div class="table-wrapper">
