--- a/game.html
+++ b/game.html
@@ -335,6 +335,11 @@ var tank = {
         		<p>定义：character : 'worrior'</p>
         		<p>被动技能，以一定的几率反弹子弹，血量越低，几率越大</p>
         	</li>
+        	<li>
+        		<h4>法师</h4>
+        		<p>定义：character : 'sorcerer'</p>
+        		<p>技能：传送至指定位置，调用方法：this.skill(x, y)，其中x、y为位置坐标</p>
+        	</li>
         </ul>
         <h2>游戏参数</h2>
         <div class="table-wrapper">
@@ -409,7 +414,7 @@ var tank = {
                 let stat = [];
                 for (var id in _stat)
                     if (_stat[id] && _stat[id].kill>=0)
-                        stat.push([id, _stat[id].kill, _stat[id].death, _stat[id].kill / (_stat[id].death===0 ? 1 : _stat[id].death), _stat[id].d_score, _stat[id].output]);
+                        stat.push([id, _stat[id].kill, _stat[id].death, _stat[id].kill / (_stat[id].death===0 ? 1 : _stat[id].death), _stat[id].d_score, Math.round(_stat[id].output)]);
                 stat.sort((a, b)=>{
                 	if (a[4] < b[4])
                 		return 1;
