--- a/game.html
+++ b/game.html
@@ -341,6 +341,11 @@ var tank = {
         		<p>定义：character : 'sorcerer'</p>
         		<p>技能：传送至指定位置，调用方法：this.skill(x, y)，其中x、y为位置坐标</p>
         	</li>
+        	<li>
+        		<h4>克隆人</h4>
+        		<p>定义：character : 'clone'</p>
+        		<p>技能：召唤一个自己的复制，使用方法：this.skill()</p>
+        	</li>
         </ul>
         <h2>游戏参数</h2>
         <div class="table-wrapper">
