--- a/game.html
+++ b/game.html
@@ -346,6 +346,11 @@ var tank = {
         		<p>定义：character : 'clone'</p>
         		<p>技能：召唤一个自己的复制，使用方法：this.skill()</p>
         	</li>
+        	<li>
+        		<h4>军火库</h4>
+        		<p>定义：character : 'arsenal'</p>
+        		<p>技能：打造一个自动攻击的炮台，使用方法：this.skill(x, y)，其中x、y为炮台位置坐标</p>
+        	</li>
         </ul>
         <h2>游戏参数</h2>
         <div class="table-wrapper">
