--- a/game.html
+++ b/game.html
@@ -166,6 +166,7 @@ var tank = {
     //位置：enemies[0].pos.x和enemies[0].pos.y
     //速度：enemies[0].speed.x和enemies[0].speed.y
     //血量：enemies[0].health
+    //id：enemies[0].id
 }</code></pre>
 
             <p>有其他玩家存活并且可见时触发，enemies数组包含了所有这些存活且可见的玩家。</p>
