--- a/game.html
+++ b/game.html
@@ -167,6 +167,7 @@ var tank = {
     //速度：enemies[0].speed.x和enemies[0].speed.y
     //血量：enemies[0].health
     //id：enemies[0].id
+    //角色：enemies[0].character
 }</code></pre>
 
             <p>有其他玩家存活并且可见时触发，enemies数组包含了所有这些存活且可见的玩家。</p>
