--- a/game.html
+++ b/game.html
@@ -168,6 +168,7 @@ var tank = {
     //血量：enemies[0].health
     //id：enemies[0].id
     //角色：enemies[0].character
+    //注意：enemies包括所有分身、炮台等衍生物，这些衍生物没有id和character属性，因此可以用来区别玩家和衍生物
 }</code></pre>
 
             <p>有其他玩家存活并且可见时触发，enemies数组包含了所有这些存活且可见的玩家。</p>
