--- a/game.html
+++ b/game.html
@@ -365,6 +365,11 @@ var tank = {
         		<p>定义：character : 'souldealer'</p>
         		<p>技能：交换两个玩家的职业，使用方法：this.skill(id1, id2)，其中id1、id2为两个玩家的id</p>
         	</li>
+            <li>
+                <h4>外交家</h4>
+                <p>定义：character : 'diplomatist'</p>
+                <p>技能：与一名玩家结盟，使用方法：this.skill(id)，其中id为一名玩家的id</p>
+            </li>
         </ul>
         <h2>游戏参数</h2>
         <div class="table-wrapper">
