--- a/game.html
+++ b/game.html
@@ -244,9 +244,9 @@ var tank = {
                                                     <td></td>
                                                 </tr>
                                                 <tr>
-                                                    <td>this.pick()</td>
+                                                    <td>this.pick(callback)</td>
                                                     <td>捡起周围的武器</td>
-                                                    <td></td>
+                                                    <td>回调函数，当成功使用pick函数之后调用，具有参数weapon，若成功捡起武器，则weapon为该武器的对象，否则为null</td>
                                                     <td></td>
                                                 </tr>
                                                 <tr>
